--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.example</groupId>
-	<artifactId>kafka-sample-01</artifactId>
-	<version>2.6.5</version>
+	<artifactId>sample-kafka</artifactId>
+	<version>3.0.0</version>
 	<packaging>jar</packaging>
 
-	<name>kafka-sample-01</name>
-	<description>Kafka Sample 1</description>
+	<name>sample-kafka</name>
+	<description>Kafka Sample</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
